ReactJS/Javascript/Realty/metadata/objects/Broker__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pic__c</fullName>
        <label>Pic</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Broker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Broker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>